fix dependency tree, update packages, replace node-sass with sass

--- a/src/modules/modals/ContextMenu/views/contextMenu.module.sass
+++ b/src/modules/modals/ContextMenu/views/contextMenu.module.sass
@@ -6,7 +6,7 @@
   overflow: hidden
   position: fixed
   z-index: 10
-  box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.1)
 
 .inner  
   background-color: #fff
