--- a/src/components/CategoryPage/Contact/contact.module.sass
+++ b/src/components/CategoryPage/Contact/contact.module.sass
@@ -24,7 +24,7 @@
   white-space: nowrap
   text-overflow: ellipsis
 
-.descript
+.description
   display: inline-block
   color: #555
   cursor: pointer
