--- a/src/components/CategoryPage/ContactList/contacts.module.sass
+++ b/src/components/CategoryPage/ContactList/contacts.module.sass
@@ -1,7 +1,7 @@
 .letter 
   font-size: 16px
-  font-weight: 200
-  color: #888
+  font-weight: 500
+  color: #1c8adb
 
 .container
   box-sizing: border-box
