--- a/src/components/ContactPage/contactPage.module.sass
+++ b/src/components/ContactPage/contactPage.module.sass
@@ -1,28 +1,25 @@
-
 .inner
-  font-size: 16px
-  margin-top: 20px
-  // box-sizing: border-box
-  // display: flex
-  // align-items: center
-
+  padding: 20px 30px 20px 30px
+  box-sizing: border-box
+  width: calc(100% - 80px)
+  min-height: 100%
 
 .fieldWrap
   display: flex
   // margin-bottom: 10px
 
 .value
+  font-size: 14px
   min-width: 100px
   padding: 10px 10px 10px 0
   color: #24293f
 
 .label
+  font-size: 14px
   min-width: 150px
   font-weight: 400
   padding: 10px 10px 10px 0
   color: #2f3242
-
-
 
 .avatarWrap  
   display: flex
