--- a/src/components/Header/header.module.sass
+++ b/src/components/Header/header.module.sass
@@ -18,7 +18,7 @@
   font-size: 2.5rem
   line-height: 76px
   font-weight: 700
-  color: #10b0e0
+  color: #1c8adb
 
 // .menu__wrap
 //   margin-left: auto
@@ -48,4 +48,4 @@
     font-size: 2.5rem
     line-height: 76px
     font-weight: 700
-    color: #10b0e0
+    color: #1c8adb
