--- a/src/components/Shared/Avatar/avatar.module.sass
+++ b/src/components/Shared/Avatar/avatar.module.sass
@@ -1,7 +1,5 @@
 .avatar
   width: 100%
   height: 100%
-  background-position: center
-  background-size: cover
-  background-repeat: no-repeat
+  object-fit: cover
 
