--- a/src/layout/Sidebar/AddContactBtn/addContactBtn.module.sass
+++ b/src/layout/Sidebar/AddContactBtn/addContactBtn.module.sass
@@ -1,10 +1,9 @@
-
-.wrap  
+.wrap
   box-sizing: border-box  
   background: linear-gradient(to top, #475071 0px, #475071 70px, rgba(71, 80, 113, 0))  
   width: 23.5rem
   min-height: 24px
-  padding-bottom: 20px
+  padding-bottom: 17px
   position: fixed
   z-index: 1
   bottom: 0
@@ -14,7 +13,7 @@
     height: 1px
     width: 100%
     background: #fff
-    margin: 30px 0 15px 0
+    margin: 30px 0 15px
     opacity: 0.7  
   
 .btn
