--- a/react/src/sass/components/sidebar-scrollbar.scss
+++ b/react/src/sass/components/sidebar-scrollbar.scss
@@ -1,4 +1,4 @@
-.scroll-wrap {
+.sidebar-scrollbar__bar {
   position: absolute;
   right: 0px;
   bottom: 0px;
@@ -8,42 +8,42 @@
   width: 5px;
   opacity: 0;
   z-index: 1;
-  transition: opacity .3s ease;
+  transition: opacity 0.3s ease;
 }
 
-.scroll-bar {
+.sidebar-scrollbar__thumb {
   position: absolute;
   top: 0;
   left: 0;
   background-color: rgb(101, 104, 136);
   min-width: 5px;
   /* min-height: 10px; */
-  opacity: .5;
+  opacity: 0.5;
   /* height: 20px; */
-  transition: opacity .1s ease, transform .3s ease-out;
+  transition: opacity 0.1s ease, transform 0.3s ease-out;
   z-index: 2;
   /* border-radius: 3px; */
 }
 
-.scroll-bar:hover {
+.sidebar-scrollbar__thumb:hover {
   opacity: 1;
 }
 
-.scroll-wrap:hover {
+.sidebar-scrollbar__bar:hover {
   width: 8px;
 }
 
-.scroll-wrap:hover .scroll-bar {
-  opacity: .8;
+.sidebar-scrollbar__bar:hover .sidebar-scrollbar__thumb {
+  opacity: 0.8;
   width: 8px;
 }
 
-.scroll-wrap.active {
-  opacity: .8;
+.sidebar-scrollbar__bar.active {
+  opacity: 0.8;
   width: 8px;
 }
 
-.scroll-wrap.active .scroll-bar {
+.sidebar-scrollbar__bar.active .sidebar-scrollbar__thumb {
   width: 8px;
-  opacity: .8;
+  opacity: 0.8;
 }
