fix sidebar styles

--- a/react/src/sass/main.scss
+++ b/react/src/sass/main.scss
@@ -9,6 +9,8 @@
 @import 'components/accountPanel';
 @import 'components/birthdays';
 @import 'components/sidebar-scrollbar';
+@import 'components/addContactBtn';
+@import 'components/search';
 
 // --COMMON
 @import 'components/dots-menu';
