--- a/react/src/sass/components/category-page.scss
+++ b/react/src/sass/components/category-page.scss
@@ -16,14 +16,8 @@
 }
 
 .category-page__container {
-  position: absolute;
-  top: 75px;
-  left: 0;
-  bottom: 0;
-  right: -100px;
-  height: calc(100% - 75px);
+  height: calc(100vh - 75px);
   box-sizing: border-box;
-  overflow-y: scroll;
 }
 
 .category-page__inner {
