--- a/react/src/sass/components/layout.scss
+++ b/react/src/sass/components/layout.scss
@@ -1,6 +1,5 @@
 .layout__wrapper {
   max-height: 100%;
-  height: 100%;
   min-height: 1px;
   width: calc(100% - 300px);
   position: fixed;
@@ -8,6 +7,7 @@
   bottom: 0;
   left: 300px;
   overflow: hidden;
+  height: 100vh;
 
   @media only screen and (max-width: 992px) {
     left: 0;
